--- a/Freedom-line-freight-express/src/styles/index.css
+++ b/Freedom-line-freight-express/src/styles/index.css
@@ -1,8 +1,3 @@
-src/styles/
-
-location: src/styles/index.css
-
-
-@import './fonts.css';
-@import './theme.css';
-@import './tailwind.css';
+@import "tailwindcss";
+@import "./fonts.css";
+@import "./theme.css";
